assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');

/*-----------------------------------------Global Styles */

/*-----------------------------------------Headers */

h1 {
    color: #011826;
    text-shadow: 2px 2px #011826Z;
}

h2, h3 {
    font-family: 'Playfair Display', serif;
    font-style: italic;
    text-align: center;
    color: #011826;
}

p {
    font-family: 'Montserrat', sans-serif;
}

h2.section-header {
    font-family: 'Playfair Display', serif;
    font-size: 2rem;
    font-style: italic;
    font-weight: 500;
    margin: 0 auto;
    text-align: center;
    padding-bottom: 20px;
}

h4.about-header {
    font-family: 'Playfair Display', serif;
    font-size: 1.2rem;
    font-style: italic;
    font-weight: 500;
    margin: 0 auto;
    padding-bottom: 10px;
}

/*-------------------------------------------- Navbar */
.navbar {
   font-family: 'Playfair Display', serif;
}

i.fas.fa-infinity {
    color: #69a8a9;
    text-size-adjust: inherit;
    font-size: 30px;
}

i.fas.fa-infinity:hover {
    color: #011826;
    font-size: 30px;
}

a.navbar-brand {
    font-family: 'Montserrat', sans-serif;
    letter-spacing: 1.5px;
    text-transform: uppercase;
    text-shadow: .5px 1px #859CA6;
    font-weight: 200;
    text-size-adjust: inherit;
}


/*-------------------------------------------- Containers */
.content-container {
    padding-top: 75px;
    padding-bottom: 75px;
}

.container-fluid {
    padding: 20px 60px;
    margin: 0 auto;
}

.container-fluid.blue-wrapper {
    padding: 40px 60px;
    background-color: rgba(135, 156, 166, 0.3);
    margin: 0 auto;
}

.container.text-center.bg-blue {
    max-width: 960px;
}

/*-------------------------------------------- Jumbotron */
.jumbotron {
    height: 100vh;
    min-height: 500px;
    background: url('../images/infinityphoto.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

.jumbotron button {
    font-family: 'Playfair Display', serif;
    font-weight: 500;
    font-style: italic;
    margin: 0 auto;
    color: #011826;
}

a.btn.btn-info.btn-lg {
    background-color: #69a8a9;
    color: #f2f2f2;
    border-color: #69a8a9;
}

a.btn.btn-info.btn-lg:hover {
    background-color: #f2f2f2;
    color: #69a8a9;
    border-color: #f2f2f2;

}

.jumbotron h1 {
  font-family: 'Montserrat', sans-serif;
  font-size: 7rem;
  color: #f2f2f2;
  font-weight: 200;
  text-transform: uppercase;
  letter-spacing: 1.5px;
  text-shadow: 2px 2px #011826;
}

.jumbotron p {
  font-family: 'Playfair Display', serif;
  font-style: italic;
  color: #F2F2F2;
}


/*-------------------------------------------- Jumbotron Overlay */
.jumbotron-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(3, 13, 21, .8);
}

/*-------------------------------------------- About */
.about {
    text-align: center;
    padding-bottom: 40px;
}

.about i {
    margin-bottom: 20px;
    font-size: 45px;
    line-height: 45px;
}

.about .btn {
    background-color: white;
    border-color: white;
    border-radius: 15px;
    min-width: 100px;
    font-weight: bold;
    margin-top: 10px;
    color: #69a8a9;
}

.about .page-header {
    font-family: 'Playfair Display', serif;
    font-size: 2rem;
    font-style: italic;
    font-weight: 500;
}

.about-content {
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
     font-weight: 400;
     margin: 0 auto;
     float: none;
}

p.display-4.about-content {
    font-size: 15px;
}

/*-------------------------------------------- Icons */
i.fas.fa-yin-yang.d-sm-block {
    color: #69a8a9;
    font-size: 50px;
}

i.fas.fa-yin-yang.d-sm-block:hover {
    color: #011826;
    font-size: 50px;
}

i.fas.fa-peace.d-sm-block {
    color: #69a8a9;
    font-size: 50px;
}

i.fas.fa-peace.d-sm-block:hover {
    color: #011826;
    font-size: 50px;
}

i.fas.fa-heart.d-sm-block {
    color: #69a8a9;
    font-size: 50px;
}

i.fas.fa-heart.d-sm-block:hover {
    color: #011826;
    font-size: 50px;
}

i.fas.fa-fire-alt.d-sm-block {
    color: #69a8a9;
    font-size: 50px;
}

i.fas.fa-fire-alt.d-sm-block:hover {
    color: #011826;
}

i.fas.fa-brain.d-sm-block {
    color: #69a8a9;
    font-size: 50px;
}

i.fas.fa-brain.d-sm-block:hover {
    color: #011826;
}

i.fas.fa-praying-hands.d-sm-block {
    color: #69a8a9;
    font-size: 50px;
}

i.fas.fa-praying-hands.d-sm-block:hover {
    color: #011826;
}

/*-------------------------------------------- Schedule */
div.img-thumbnail {
    padding-bottom: 20px;
    border: none;
    margin-bottom: 30px;
    border-radius: 5px;
}

.img-thumbnail img {
    width: 100%;
    height: 100%;
    margin-bottom: 10px;
}

/*-------------------------------------------- Quotes */

#myCarousel {
    font-family: 'Montserrat', sans-serif;
    font-size: 14px;
}

i.fas.fa-chevron-left,
i.fas.fa-chevron-right {
    color: #69a8a9;
    font-size: 20px;
}

i.fas.fa-chevron-left:hover,
i.fas.fa-chevron-right:hover {
    color: #011826;
    font-size: 30px;
}

.carousel-indicators li {
    background-color: transparent;}

.carousel-indicators li.active {
    background-color: transparent;
}

div.carousel-item {
    line-height: 1.375em;
    font-weight: 400;
    padding-left: 40px;
    padding-right: 40px;
}

h3.text-center.quotes {
    padding-top: 20px;
    padding-bottom: 20px;
}

/*-------------------------------------------- Contact */

div.col-12.col-6 {
    align-content: center;
    margin: 0px auto;
    text-align: left;
    font-size: 12px;
}

.embed-responsive.embed-responsive-16by9 {
    align-content: center;
    margin: 0px auto;
    text-align: center;
}

/*-------------------------------------------- Contact */

/*-------------------------------------------- Footer */
.footer {
    background-color: #f8f9fa;
    font-size: 14px;
}

footer i.fas.fa-chevron-up {
    font-size: 20px;
    margin-bottom: 10px;
    color: #69A8A9;
}

footer i.fas.fa-chevron-up:hover {
    font-size: 20px;
    margin-bottom: 10px;
    color: #011826;
}

/*-------------------------------------------- Media Queries */
  @media screen and (max-width: 1024px) {
.jumbotron {
    left: 50%;
    margin-left: auto;
   }
}

/* stack overflow (https://stackoverflow.com/questions/56964388/how-to-fix-font-awesome-icons-not-showing-on-mobile-chrome) */
@media screen and (max-width:600px){
i {
    color: #69a8a9;
    }
}

@media screen and (max-width:600px){
i:hover {
    color: #081826;
    }
}

 @media screen and (max-width: 600px) {
h3.about-header {
    font-family: 'Playfair Display', serif;
    font-size: 1.5rem;
    font-style: italic;
    font-weight: 500;
    margin: 0 auto;
    float: none;
}
 }

